--- a/src/pages/sign-up-page/sign-up-page.scss
+++ b/src/pages/sign-up-page/sign-up-page.scss
@@ -14,7 +14,7 @@ $blue: #1890FF;
   border: 1px solid $grey;
   border-radius: 6px;
   box-shadow: 0px 22px 106px 0px #00000012;
-  padding: 40px 32px;
+  padding: 30px 32px;
   display: flex;
   flex-direction: column;
 
@@ -92,4 +92,11 @@ $blue: #1890FF;
 
 .last-label {
   margin-bottom: 20px;
+}
+
+.spin-container {
+  display: flex;
+  justify-content: center;
+  min-height: 30px;
+  margin-top: -25px;
 }
