--- a/src/pages/article-page/article-page.scss
+++ b/src/pages/article-page/article-page.scss
@@ -1,3 +1,29 @@
 .blog__article {
   padding-bottom: 50px;
 }
+
+.article__btn {
+  font-size: 14px;
+  line-height: 22px;
+  height: 30px;
+  padding: 0px 12px;
+  border: 1px solid #52C41A;
+  color: #52C41A;
+  border-radius: 5px;
+  transition: all 0.3s ease 0s;
+  &:hover {
+    background-color: #52C41A;
+    color: #fff;
+  }
+}
+
+
+.article__btn-delete {
+  border: 1px solid red;
+  color: red;
+  margin-right: 12px;
+  &:hover {
+      background-color: red;
+      color: #fff;
+    }
+}
